[package]
name = "speedcf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
colored = "2.0.0"
serde_json = "1.0"
futures-util = "0.3"
lazy_static = "1.4.0"
indicatif = "0.16"
